{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 41,
  "lineage": "8cfc99cb-3536-5d52-b20c-be86cfa4430a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gitlab-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2d05bdf1988ecbb",
            "association_id": "eipassoc-09d419ede896a69b1",
            "domain": "vpc",
            "id": "eipalloc-0f2d05bdf1988ecbb",
            "instance": "i-03a2e132e28c7cfbe",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0b3fc806eaf480587",
            "private_dns": "ip-10-0-1-177.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.177",
            "public_dns": "ec2-43-200-168-130.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.168.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cicd-donggyu-gitlab-eip"
            },
            "tags_all": {
              "Name": "cicd-donggyu-gitlab-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.gitlab-ec2",
            "aws_key_pair.gitlab-keypair",
            "aws_security_group.gitlab-sg",
            "aws_subnet.publics",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4a68158c0a4876c",
            "association_id": "eipassoc-0f32757c152cbbc11",
            "domain": "vpc",
            "id": "eipalloc-0d4a68158c0a4876c",
            "instance": "i-0a50ec757db3117b1",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0e2e0bac0e6de11d7",
            "private_dns": "ip-10-0-1-114.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.114",
            "public_dns": "ec2-3-36-142-12.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.142.12",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cicd-donggyu-jenkins-eip"
            },
            "tags_all": {
              "Name": "cicd-donggyu-jenkins-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jenkin-ec2",
            "aws_key_pair.jenkins-keypair",
            "aws_security_group.jenkins-sg",
            "aws_subnet.publics",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gitlab-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea4d4b8dc1e46212",
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:instance/i-03a2e132e28c7cfbe",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a2e132e28c7cfbe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "gitlab-ec2-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b3fc806eaf480587",
            "private_dns": "ip-10-0-1-177.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.177",
            "public_ip": "43.200.168.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b78d90331136d3a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019e2bced39bc7a93",
            "tags": {
              "Name": "cicd-donggyu-gitlab-sg"
            },
            "tags_all": {
              "Name": "cicd-donggyu-gitlab-sg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06217ab28f23a3784"
            ]
          },
          "dependencies": [
            "aws_key_pair.gitlab-keypair",
            "aws_security_group.gitlab-sg",
            "aws_subnet.publics",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkin-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea4d4b8dc1e46212",
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:instance/i-0a50ec757db3117b1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a50ec757db3117b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "jenkins-ec2-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e2e0bac0e6de11d7",
            "private_dns": "ip-10-0-1-114.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.114",
            "public_ip": "3.36.142.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b5771e23ce6d805",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019e2bced39bc7a93",
            "tags": {
              "Name": "cicd-donggyu-jenkins-sg"
            },
            "tags_all": {
              "Name": "cicd-donggyu-jenkins-sg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-044ded77e60c3a563"
            ]
          },
          "dependencies": [
            "aws_key_pair.jenkins-keypair",
            "aws_security_group.jenkins-sg",
            "aws_subnet.publics",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:internet-gateway/igw-030c2502a0d799a34",
            "id": "igw-030c2502a0d799a34",
            "owner_id": "182024812696",
            "tags": {
              "Name": "cicd-donggyu-igw"
            },
            "tags_all": {
              "Name": "cicd-donggyu-igw"
            },
            "vpc_id": "vpc-0a2ef6181cff6ef24"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:route-table/rtb-0d439b0793566f6d9",
            "id": "rtb-0d439b0793566f6d9",
            "owner_id": "182024812696",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-030c2502a0d799a34",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a2ef6181cff6ef24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_mapping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01756062747e7ff5c",
            "route_table_id": "rtb-0d439b0793566f6d9",
            "subnet_id": "subnet-019e2bced39bc7a93"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.publics",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "ap-northeast-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0352c2dc0e786379c",
            "route_table_id": "rtb-0d439b0793566f6d9",
            "subnet_id": "subnet-04d4eb3eb651d25f3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.publics",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gitlab-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:security-group/sg-06217ab28f23a3784",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06217ab28f23a3784",
            "ingress": [
              {
                "cidr_blocks": [
                  "221.151.163.17/32"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "221.151.163.17/32"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "221.151.163.17/32"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "http self",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "https self",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              }
            ],
            "name": "gitlab-sg",
            "name_prefix": "",
            "owner_id": "182024812696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-donggyu-jenkins-sg"
            },
            "tags_all": {
              "Name": "cicd-donggyu-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2ef6181cff6ef24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:security-group/sg-044ded77e60c3a563",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044ded77e60c3a563",
            "ingress": [
              {
                "cidr_blocks": [
                  "221.151.163.17/32"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "221.151.163.17/32"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "221.151.163.17/32"
                ],
                "description": "jenkins use internal",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "221.151.163.17/32"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "jenkins to alb(self)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "182024812696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-donggyu-jenkins-sg"
            },
            "tags_all": {
              "Name": "cicd-donggyu-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2ef6181cff6ef24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-019e2bced39bc7a93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019e2bced39bc7a93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cicd-donggyu-ap-northeast-2a-public"
            },
            "tags_all": {
              "Name": "cicd-donggyu-ap-northeast-2a-public"
            },
            "vpc_id": "vpc-0a2ef6181cff6ef24"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ap-northeast-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-04d4eb3eb651d25f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d4eb3eb651d25f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cicd-donggyu-ap-northeast-2b-public"
            },
            "tags_all": {
              "Name": "cicd-donggyu-ap-northeast-2b-public"
            },
            "vpc_id": "vpc-0a2ef6181cff6ef24"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:vpc/vpc-0a2ef6181cff6ef24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c9006c9a2b5ac477",
            "default_route_table_id": "rtb-0c98d1b7ddbb4e408",
            "default_security_group_id": "sg-05c8b67e727e82ac9",
            "dhcp_options_id": "dopt-00db6602bf8d3ab9d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a2ef6181cff6ef24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c98d1b7ddbb4e408",
            "owner_id": "182024812696",
            "tags": {
              "Name": "cicd-donggyu-vpc"
            },
            "tags_all": {
              "Name": "cicd-donggyu-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:loadbalancer/app/jenkins-alb/f5a76600a324a8d0",
            "arn_suffix": "app/jenkins-alb/f5a76600a324a8d0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "jenkins-alb-1924877606.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:loadbalancer/app/jenkins-alb/f5a76600a324a8d0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jenkins-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01942fccde9f568f8",
              "sg-044ded77e60c3a563"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-019e2bced39bc7a93"
              },
              {
                "subnet_id": "subnet-04d4eb3eb651d25f3"
              }
            ],
            "subnets": [
              "subnet-019e2bced39bc7a93",
              "subnet-04d4eb3eb651d25f3"
            ],
            "tags": {
              "Name": "jenkins-alb"
            },
            "tags_all": {
              "Name": "jenkins-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0a2ef6181cff6ef24",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.jenkins-sg",
            "aws_subnet.publics",
            "aws_vpc.vpc",
            "module.jenkins-alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:listener/app/jenkins-alb/f5a76600a324a8d0/0b8746c645e8f734",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/jenkins-tg/4285e5efd16b1d1b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:listener/app/jenkins-alb/f5a76600a324a8d0/0b8746c645e8f734",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:loadbalancer/app/jenkins-alb/f5a76600a324a8d0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.jenkin-ec2",
            "aws_key_pair.jenkins-keypair",
            "aws_security_group.jenkins-sg",
            "aws_subnet.publics",
            "aws_vpc.vpc",
            "module.jenkins-alb.aws_lb.this",
            "module.jenkins-alb.aws_lb_target_group.main",
            "module.jenkins-alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins-alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/jenkins-tg/4285e5efd16b1d1b",
            "arn_suffix": "targetgroup/jenkins-tg/4285e5efd16b1d1b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "403",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/jenkins-tg/4285e5efd16b1d1b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jenkins-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "jenkins-tg"
            },
            "tags_all": {
              "Name": "jenkins-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a2ef6181cff6ef24"
          },
          "dependencies": [
            "aws_instance.jenkin-ec2",
            "aws_key_pair.jenkins-keypair",
            "aws_security_group.jenkins-sg",
            "aws_subnet.publics",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins-alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.jenkins",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/jenkins-tg/4285e5efd16b1d1b-20230715031540026600000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/jenkins-tg/4285e5efd16b1d1b",
            "target_id": "i-0a50ec757db3117b1"
          },
          "dependencies": [
            "aws_instance.jenkin-ec2",
            "aws_key_pair.jenkins-keypair",
            "aws_security_group.jenkins-sg",
            "aws_subnet.publics",
            "aws_vpc.vpc",
            "module.jenkins-alb.aws_lambda_permission.lb",
            "module.jenkins-alb.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins-alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:security-group/sg-01942fccde9f568f8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01942fccde9f568f8",
            "ingress": [],
            "name": "jenkins-alb-20230715031539028800000001",
            "name_prefix": "jenkins-alb-",
            "owner_id": "182024812696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-alb"
            },
            "tags_all": {
              "Name": "jenkins-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2ef6181cff6ef24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}